--- a/sass/main.scss
+++ b/sass/main.scss
@@ -74,6 +74,10 @@ body {
     border-radius: 1rem;
     overflow: hidden;
 
+    box-shadow: 0 1rem 5rem .1rem hsla(224, 23%, 55%, 0.651);
+
+
+
     .hero-img {
         width: min(100%);
     }
